# paradigm-ctf-2022

./: README.md  build.sh  run.sh  solve.sh
cairo-auction/: info.yaml
cairo-auction/private/: solve.py
cairo-proxy/: info.yaml
cairo-proxy/private/: solve.py
electric-sheep/: info.yaml
electric-sheep/private/: solve.py
fun-reversing-challenge/: info.yaml
fun-reversing-challenge/private/: Exploit.sol
hana/: .gitattributes  .gitignore  make_tarball.sh  notes
hana/client/: api.js  challenge1.js  challenge2.js  challenge3.js
hana/docker/: init_db.sh  start_server.sh
hint-finance/: info.yaml
just-in-time/: info.yaml
lockbox2/: info.yaml
merkledrop/: info.yaml
otter-world/: info.yml
otterswap/: clean.sh  info.yml
pool/: clean.sh  create_archive.sh  info.yml
pool/framework/chall/programs/chall/: Cargo.toml
pool/framework/chall/programs/chall/src/: instruction_accounts.rs  lib.rs  pool.rs
pool/sol-ctf-framework/: Cargo.toml  LICENSE  README.md
pool/sol-ctf-framework/examples/moar-horse-5/: .gitignore  README  challenge.yaml
pool/sol-ctf-framework/examples/moar-horse-5/challenge/: flag.txt
pool/sol-ctf-framework/examples/moar-horse-5/solve/: Cargo.toml  solve.py
pool/sol-ctf-framework/examples/moar-horse-5/solve/src/: processor.rs
pool/sol-ctf-framework/examples/solfire/: main.rs
pool/sol-ctf-framework/src/: lib.rs
random/: info.yaml
rescue/: info.yaml
riddle-of-the-sphinx/: info.yaml
sourcecode/: info.yaml
stealing-sats/: info.yaml
trapdoooor/: info.yaml
trapdooor/: info.yaml
vanity/: info.yaml
(+56 files in other folders)
